--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.6.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-i18next": "^13.3.1",
+    "react-icons": "^4.11.0",
+    "react-select": "^5.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
