--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
-    "react-select": "^5.7.7"
+    "react-select": "^5.7.7",
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
